--- a/config.example.yml
+++ b/config.example.yml
@@ -1,6 +1,13 @@
-show_error_details: false
-debug: true
+dev:
+  show_error_details: false
+  debug: true
+  secrets:
+    - ""
+    - ""
+    - ""
+  signing_key: ""
+  callback_url: "http://localhost:8000/api/auth/callback"
 
-discord:
-  client_id: ""
-  redirect_uri: ""
+  discord:
+    client_id: ""
+    client_secret: ""
