--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "sass": "^1.49.9",
     "vite": "^2.8.0",
     "vite-plugin-solid": "^2.2.5",
     "vite-plugin-windicss": "^1.7.0"
   },
   "dependencies": {
+    "bulma": "^0.9.3",
     "solid-app-router": "^0.2.1",
     "solid-js": "^1.3.7"
   }
