--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,11 @@
   "devDependencies": {
     "sass": "^1.49.9",
     "vite": "^2.8.0",
-    "vite-plugin-solid": "^2.2.5",
-    "vite-plugin-windicss": "^1.7.0"
+    "vite-plugin-solid": "^2.2.5"
   },
   "dependencies": {
     "bulma": "^0.9.3",
-    "solid-app-router": "^0.2.1",
-    "solid-js": "^1.3.7"
+    "solid-app-router": "^0.3.0",
+    "solid-js": "^1.3.9"
   }
 }
