--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MPL-2.0",
   "dependencies": {
     "bulma": "^0.9.3",
+    "chokidar-cli": "^3.0.0",
     "esbuild": "^0.14.25",
     "purgecss": "^4.1.3",
     "rimraf": "^3.0.2",
