--- a/package.json
+++ b/package.json
@@ -6,11 +6,8 @@
   "author": "meizuflux",
   "license": "MPL-2.0",
   "dependencies": {
-    "bulma": "^0.9.3",
     "chokidar-cli": "^3.0.0",
     "esbuild": "^0.14.25",
-    "purgecss": "^4.1.3",
-    "rimraf": "^3.0.2",
-    "sass": "^1.49.9"
+    "rimraf": "^3.0.2"
   }
 }
