--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "license": "MPL-2.0",
   "dependencies": {
     "chokidar-cli": "^3.0.0",
-    "esbuild": "^0.14.25",
-    "rimraf": "^3.0.2"
+    "esbuild": "^0.14.25"
   }
 }
