--- a/config.example.yml
+++ b/config.example.yml
@@ -1,9 +1,11 @@
 dev:
+  domain: "mzf.one"
   show_error_details: true
   debug: true
   postgres_dsn: ""
     
 prod:
+  domain: "mzf.one"
   show_error_details: true
   debug: true
   postgres_dsn: ""
